Adopt and implement the full ReQL DSL prerequisites

--- a/test/config.php.dist
+++ b/test/config.php.dist
@@ -7,9 +7,9 @@ namespace TBolier\RethinkQL\Test;
     'PHPUNIT_CONNECTIONS',
     [
         'phpunit_default' => [
-            'host' => 'localhost',
+            'hostname' => 'localhost',
             'port' => 28015,
-            'default_db' => 'test',
+            'dbname' => 'test',
             'user' => 'admin',
             'password' => '',
             'timeout' => 5,
