--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,10 +2,18 @@ before_commands:
     - "composer install"
 
 build:
-  # Runs before inferred commands
-  before:
-    - ''
+  dependencies:
+    # Runs before inferred commands
+    before:
+      - 'source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list'
+      - 'wget -qO- https://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -'
+      - 'sudo apt-get update -y'
+      - 'sudo apt-get install rethinkdb -y'
+      - 'sudo cp /etc/rethinkdb/default.conf.sample /etc/rethinkdb/instances.d/instance1.conf'
+      - 'sudo /etc/init.d/rethinkdb start'
   environment:
+    variables:
+      integration_test_file: 'config_scrutinizer.php'
     php:
       version: '7.1'
       ini:
