Remove security analysis

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -29,7 +29,7 @@ build:
         project_setup:
             override: true
         tests:
-            override: [php-scrutinizer-run ---enable-security-analysis]
+            override: [php-scrutinizer-run]
 
 tools:
   php_code_coverage: true
