--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "php": "^7.1",
         "psr/http-message": "^1.0",
         "symfony/serializer": "^4.1",
-        "symfony/property-access": "^4.1"
+        "symfony/property-access": "^4.1",
+        "ext-json": "*"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
